--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="relative">
         <div class="rounded-2xl overflow-hidden shadow-lg bg-gradient-to-br from-indigo-50 to-white p-6">
-          <img src="/static/images/hero.jpg" alt="hero image" class="w-full h-64 object-cover rounded-lg" />
+          <img src="/static/images/shankar.jpg" alt="image" class="w-full h-64 object-cover rounded-lg" />
           <div class="mt-4">
             <h3 class="text-lg font-semibold">Selected Projects</h3>
             <ul class="mt-2 text-sm text-slate-600 space-y-2">
